--- a/ReadMe
+++ b/ReadMe
@@ -1,1 +1,8 @@
+Descrtiption
 CoCoa – is an ontology-based knowledge graph of cyber incident for enhanced situational awareness of the monitored environment.
+
+Installation
+
+Contribution
+
+License
