--- a/ReadMe
+++ b/ReadMe
@@ -2,7 +2,10 @@ Descrtiption
 CoCoa – is an ontology-based knowledge graph of cyber incident for enhanced situational awareness of the monitored environment.
 
 Installation
+There is a code yet, it needs to be developed. The framework exists, so collaborators are welcomed to contribute.
 
 Contribution
+Please see that attached files, and feel free to contact me if you want to help automate the code.
 
 License
+Free and publicly available.
